entrega1/generated/PatitoParser.py
# Generated from Patito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'program'", "'main'", "'end'", 
                     "'if'", "'else'", "'while'", "'do'", "'print'", "'var'", 
                     "'void'", "'int'", "'float'", "'return'", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'!='", "'<'", "'>'", "'=='", 
                     "'<='", "'>='", "','", "':'", "';'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "WS", "PROGRAM", "MAIN", "END", "IF", 
                      "ELSE", "WHILE", "DO", "PRINT", "VAR", "VOID", "INT_TYPE", 
                      "FLOAT_TYPE", "RETURN", "ASSIGN", "PLUS", "MINUS", 
                      "MUL", "DIV", "NEQ", "LT", "GT", "EQ", "LEQ", "GEQ", 
                      "COMMA", "COLON", "SEMI", "LP", "RP", "LB", "RB", 
                      "LBR", "RBR", "ID", "INT_LIT", "FLOAT_LIT", "STRING_LIT" ]

    RULE_start = 0
    RULE_programa = 1
    RULE_programa_p = 2
    RULE_programa_pp = 3
    RULE_programa_ppp = 4
    RULE_vars = 5
    RULE_vars_p = 6
    RULE_vars_pp = 7
    RULE_body = 8
    RULE_body_p = 9
    RULE_body_pp = 10
    RULE_assign = 11
    RULE_cycle = 12
    RULE_type = 13
    RULE_cte = 14
    RULE_exp = 15
    RULE_exp_p = 16
    RULE_termino = 17
    RULE_termino_p = 18
    RULE_fcall = 19
    RULE_fcall_p = 20
    RULE_fcall_pp = 21
    RULE_statement = 22
    RULE_statement_p = 23
    RULE_condition = 24
    RULE_condition_p = 25
    RULE_expresion = 26
    RULE_expresion_p = 27
    RULE_funcs = 28
    RULE_funcs_p = 29
    RULE_funcs_pp = 30
    RULE_funcs_ppp = 31
    RULE_funcs_pppp = 32
    RULE_factor = 33
    RULE_factor_p = 34
    RULE_factor_pp = 35
    RULE_factor_ppp = 36
    RULE_print_cfg = 37
    RULE_print_p = 38
    RULE_print_pp = 39
    RULE_return_cfg = 40
    RULE_return_p = 41

    ruleNames =  [ "start", "programa", "programa_p", "programa_pp", "programa_ppp", 
                   "vars", "vars_p", "vars_pp", "body", "body_p", "body_pp", 
                   "assign", "cycle", "type", "cte", "exp", "exp_p", "termino", 
                   "termino_p", "fcall", "fcall_p", "fcall_pp", "statement", 
                   "statement_p", "condition", "condition_p", "expresion", 
                   "expresion_p", "funcs", "funcs_p", "funcs_pp", "funcs_ppp", 
                   "funcs_pppp", "factor", "factor_p", "factor_pp", "factor_ppp", 
                   "print_cfg", "print_p", "print_pp", "return_cfg", "return_p" ]

    EOF = Token.EOF
    WS=1
    PROGRAM=2
    MAIN=3
    END=4
    IF=5
    ELSE=6
    WHILE=7
    DO=8
    PRINT=9
    VAR=10
    VOID=11
    INT_TYPE=12
    FLOAT_TYPE=13
    RETURN=14
    ASSIGN=15
    PLUS=16
    MINUS=17
    MUL=18
    DIV=19
    NEQ=20
    LT=21
    GT=22
    EQ=23
    LEQ=24
    GEQ=25
    COMMA=26
    COLON=27
    SEMI=28
    LP=29
    RP=30
    LB=31
    RB=32
    LBR=33
    RBR=34
    ID=35
    INT_LIT=36
    FLOAT_LIT=37
    STRING_LIT=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(PatitoParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(PatitoParser.EOF, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = PatitoParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.programa()
            self.state = 85
            self.match(PatitoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(PatitoParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def programa_p(self):
            return self.getTypedRuleContext(PatitoParser.Programa_pContext,0)


        def programa_pp(self):
            return self.getTypedRuleContext(PatitoParser.Programa_ppContext,0)


        def MAIN(self):
            return self.getToken(PatitoParser.MAIN, 0)

        def body(self):
            return self.getTypedRuleContext(PatitoParser.BodyContext,0)


        def END(self):
            return self.getToken(PatitoParser.END, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = PatitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(PatitoParser.PROGRAM)
            self.state = 88
            self.match(PatitoParser.ID)
            self.state = 89
            self.match(PatitoParser.SEMI)
            self.state = 90
            self.programa_p()
            self.state = 91
            self.programa_pp()
            self.state = 92
            self.match(PatitoParser.MAIN)
            self.state = 93
            self.body()
            self.state = 94
            self.match(PatitoParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programa_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self):
            return self.getTypedRuleContext(PatitoParser.VarsContext,0)


        def programa_p(self):
            return self.getTypedRuleContext(PatitoParser.Programa_pContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa_p

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma_p" ):
                return visitor.visitPrograma_p(self)
            else:
                return visitor.visitChildren(self)




    def programa_p(self):

        localctx = PatitoParser.Programa_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programa_p)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.vars_()
                self.state = 97
                self.programa_p()
                pass
            elif token in [3, 11, 12, 13]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programa_ppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa_ppp(self):
            return self.getTypedRuleContext(PatitoParser.Programa_pppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa_pp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma_pp" ):
                return visitor.visitPrograma_pp(self)
            else:
                return visitor.visitChildren(self)




    def programa_pp(self):

        localctx = PatitoParser.Programa_ppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programa_pp)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.programa_ppp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programa_pppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs(self):
            return self.getTypedRuleContext(PatitoParser.FuncsContext,0)


        def programa_ppp(self):
            return self.getTypedRuleContext(PatitoParser.Programa_pppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa_ppp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma_ppp" ):
                return visitor.visitPrograma_ppp(self)
            else:
                return visitor.visitChildren(self)




    def programa_ppp(self):

        localctx = PatitoParser.Programa_pppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_programa_ppp)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.funcs()
                self.state = 107
                self.programa_ppp()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(PatitoParser.VAR, 0)

        def vars_p(self):
            return self.getTypedRuleContext(PatitoParser.Vars_pContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_vars

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars" ):
                return visitor.visitVars(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = PatitoParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(PatitoParser.VAR)
            self.state = 113
            self.vars_p()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def vars_pp(self):
            return self.getTypedRuleContext(PatitoParser.Vars_ppContext,0)


        def COLON(self):
            return self.getToken(PatitoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PatitoParser.TypeContext,0)


        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_vars_p

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_p" ):
                return visitor.visitVars_p(self)
            else:
                return visitor.visitChildren(self)




    def vars_p(self):

        localctx = PatitoParser.Vars_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vars_p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(PatitoParser.ID)
            self.state = 116
            self.vars_pp()
            self.state = 117
            self.match(PatitoParser.COLON)
            self.state = 118
            self.type_()
            self.state = 119
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_ppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(PatitoParser.COMMA, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def vars_pp(self):
            return self.getTypedRuleContext(PatitoParser.Vars_ppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_vars_pp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_pp" ):
                return visitor.visitVars_pp(self)
            else:
                return visitor.visitChildren(self)




    def vars_pp(self):

        localctx = PatitoParser.Vars_ppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vars_pp)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(PatitoParser.COMMA)
                self.state = 122
                self.match(PatitoParser.ID)
                self.state = 123
                self.vars_pp()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(PatitoParser.LB, 0)

        def body_p(self):
            return self.getTypedRuleContext(PatitoParser.Body_pContext,0)


        def RB(self):
            return self.getToken(PatitoParser.RB, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = PatitoParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(PatitoParser.LB)
            self.state = 128
            self.body_p()
            self.state = 129
            self.match(PatitoParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_pp(self):
            return self.getTypedRuleContext(PatitoParser.Body_ppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_body_p

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_p" ):
                return visitor.visitBody_p(self)
            else:
                return visitor.visitChildren(self)




    def body_p(self):

        localctx = PatitoParser.Body_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_body_p)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.body_pp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_ppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(PatitoParser.StatementContext,0)


        def body_pp(self):
            return self.getTypedRuleContext(PatitoParser.Body_ppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_body_pp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_pp" ):
                return visitor.visitBody_pp(self)
            else:
                return visitor.visitChildren(self)




    def body_pp(self):

        localctx = PatitoParser.Body_ppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_body_pp)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 7, 9, 14, 31, 35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.statement()
                self.state = 136
                self.body_pp()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PatitoParser.ASSIGN, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = PatitoParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(PatitoParser.ID)
            self.state = 142
            self.match(PatitoParser.ASSIGN)
            self.state = 143
            self.expresion()
            self.state = 144
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PatitoParser.WHILE, 0)

        def LP(self):
            return self.getToken(PatitoParser.LP, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def RP(self):
            return self.getToken(PatitoParser.RP, 0)

        def DO(self):
            return self.getToken(PatitoParser.DO, 0)

        def body(self):
            return self.getTypedRuleContext(PatitoParser.BodyContext,0)


        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_cycle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCycle" ):
                return visitor.visitCycle(self)
            else:
                return visitor.visitChildren(self)




    def cycle(self):

        localctx = PatitoParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(PatitoParser.WHILE)
            self.state = 147
            self.match(PatitoParser.LP)
            self.state = 148
            self.expresion()
            self.state = 149
            self.match(PatitoParser.RP)
            self.state = 150
            self.match(PatitoParser.DO)
            self.state = 151
            self.body()
            self.state = 152
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(PatitoParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(PatitoParser.FLOAT_TYPE, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = PatitoParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(PatitoParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(PatitoParser.FLOAT_LIT, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_cte

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCte" ):
                return visitor.visitCte(self)
            else:
                return visitor.visitChildren(self)




    def cte(self):

        localctx = PatitoParser.CteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_cte)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            _la = self._input.LA(1)
            if not(_la==36 or _la==37):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(PatitoParser.TerminoContext,0)


        def exp_p(self):
            return self.getTypedRuleContext(PatitoParser.Exp_pContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):
